force-app/main/default/objects/KimbleOne__InvoiceTaxSummary__c/KimbleOne__InvoiceTaxSummary__c.object-meta.xml
<CustomObject>
    <label>Invoice Tax Summary</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Invoice Tax Summary Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Tax Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>