force-app/main/default/objects/KimbleOne__InvoiceTaxSummary__c/fields/KimbleOne__Invoice__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>KimbleOne__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Tax Summaries</relationshipLabel>
    <relationshipName>InvoiceTaxSummaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>