force-app/main/default/objects/KimbleOne__InvoiceTaxSummary__c/fields/KimbleOne__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxAmount__c</fullName>
    <label>Tax Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>